Revise index.html structure and content
Updated the title and added a header, section for available APIs, and footer.

--- a/index.html
+++ b/index.html
@@ -2,14 +2,27 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Abhishek's APIs</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Abhishek's Free APIs</title>
+  <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-  <h1>💪 Abhishek's APIs</h1>
-  <ul>
-    <li><a href="gym-api/biceps.json">Biceps API</a></li>
-    <li><a href="gym-api/triceps.json">Triceps API</a></li>
-    <li><a href="gym-api/chest.json">Chest API</a></li>
-  </ul>
+  <header>
+    <h1>💻 Abhishek's Free APIs</h1>
+    <p>Simple, open, and fast JSON APIs — built with ❤️ using GitHub Pages.</p>
+  </header>
+
+  <section class="api-list">
+    <h2>Available APIs</h2>
+    <ul>
+      <li><a href="gym-api/biceps.json">💪 Gym API - Biceps</a></li>
+      <li><a href="gym-api/triceps.json">🏋️ Gym API - Triceps</a></li>
+      <li><a href="users-api/random-users.json">👤 Users API - Random Users</a></li>
+    </ul>
+  </section>
+
+  <footer>
+    <p>Made with ❤️ by <a href="https://abhishekthakare68.github.io">Abhishek Thakare</a></p>
+  </footer>
 </body>
 </html>
